[package]
name = "polywall"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ukarroum/polywall"

[dependencies]
cynic = "3.10.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.11" , features = ["blocking"]}
tempfile = "3.18.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
